# hq-sync

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: CLAUDE.md
.github/workflows/: release.yml
scripts/: check-default-ignores-parity.sh  create-dmg.sh  generate-latest-json.sh  generate-tray-icons.py  measure-perf.sh  notarize.sh
src/: App.svelte  main.ts  sentry-before-send.test.ts  sentry-before-send.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: emit-sample-journal.rs
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  sentry_scrub.rs  tray.rs  updater.rs
src-tauri/src/commands/: auth.rs  autostart.rs  cognito.rs  companies.rs  config.rs  conflicts.rs  daemon.rs  embeddings.rs  first_push.rs  folder_picker.rs  journals.rs  mod.rs  oauth.rs  personal.rs  prewarm.rs  process.rs  provision.rs  settings.rs  status.rs  sync.rs  telemetry.rs  vault_client.rs  workspaces.rs
src-tauri/src/util/: ignore.rs  journal.rs  logfile.rs  mod.rs  paths.rs  test_support.rs
src-tauri/tests/: embeddings_handoff_test.rs  promote_command_test.rs  promote_flow_test.rs
src-tauri/tests/fixtures/: stub-qmd.sh  stub-sync-runner.sh
src-tauri/tests/fixtures/claude-projects/: session-asst.jsonl
src-tauri/tests/fixtures/claude-projects/bar/: session2.jsonl
src-tauri/tests/fixtures/claude-projects/foo/: session1.jsonl
src/components/: CompanyRow.svelte  CompanyRow.test.ts  ConflictModal.svelte  ConflictRow.svelte  EmbeddingsRow.svelte  EmbeddingsRow.test.ts  Popover.svelte  Settings.svelte  Settings.test.ts  SignInPrompt.svelte  SyncButton.svelte  SyncStats.svelte  WorkspaceList.svelte
src/lib/: auth.test.ts  auth.ts  stores.ts  workspaces.ts
src/stores/: conflicts.ts  embeddings.ts
src/styles/: popover.css
tests/: MANUAL_TESTING.md  PERF.md
