[package]
name = "hq-sync-menubar"
version = "0.1.13"
edition = "2021"
# Disambiguate `cargo run` — the recent ignore-filter port added a second
# binary (`emit-default-ignores`) alongside the menubar entry point.
# Without `default-run`, Tauri's invocation `cargo run --no-default-features`
# bails with "could not determine which binary to run".
default-run = "hq-sync-menubar"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dirs = "6"
rfd = "0.15"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sentry = "^0.35"
ignore = "0.4"
walkdir = "2"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-config = "1"
aws-smithy-types = "1"
aws-credential-types = "1"
ulid = "1"
bytes = "1"

[profile.release]
split-debuginfo = "packed"

[[bin]]
name = "emit-default-ignores"
path = "src/bin/emit-default-ignores.rs"

[target.'cfg(target_os = "macos")'.dependencies]
# Used by commands::folder_picker to enumerate NSApp.windows and close
# any stale NSOpenPanel/NSSavePanel before opening a new picker. rfd
# doesn't expose the panel handle, so we reach into AppKit directly.
objc2 = "0.6"

[features]
journal-cli = []

[[bin]]
name = "emit-sample-journal"
path = "src/bin/emit-sample-journal.rs"
required-features = ["journal-cli"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tauri = { version = "2", features = ["test"] }
