[package]
name = "hq-sync-menubar"
version = "0.1.15"
edition = "2021"
# Disambiguate `cargo run` — the recent ignore-filter port added a second
# binary (`emit-default-ignores`) alongside the menubar entry point.
# Without `default-run`, Tauri's invocation `cargo run --no-default-features`
# bails with "could not determine which binary to run".
default-run = "hq-sync-menubar"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dirs = "6"
rfd = "0.15"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sentry = "^0.35"
ignore = "0.4"
walkdir = "2"
# `behavior-version-latest` opts into the AWS SDK's modern defaults at compile
# time. Without it, constructing an S3 client panics with
#   "A behavior major version must be set when sending a request or
#    constructing a client"
# because aws-sdk-s3 1.x requires you to pin a BehaviorVersion either in code
# (per call site) or at the dep level via this feature. We pin at the dep
# level so first_push.rs / personal.rs don't each need to remember it.
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1", features = ["behavior-version-latest"] }
aws-config = "1"
aws-smithy-types = "1"
aws-credential-types = "1"
ulid = "1"
bytes = "1"

[profile.release]
split-debuginfo = "packed"

# Dev-only parity helper: prints DEFAULT_IGNORES for the parity script
# (scripts/check-default-ignores-parity.sh). Declared as `[[example]]`
# (not `[[bin]]`) so Tauri's bundler doesn't try to copy it into the .app
# during `tauri build` — it's not a shipped binary. Run with:
#   cargo run --example emit-default-ignores
[[example]]
name = "emit-default-ignores"
path = "src/bin/emit-default-ignores.rs"

[target.'cfg(target_os = "macos")'.dependencies]
# Used by commands::folder_picker to enumerate NSApp.windows and close
# any stale NSOpenPanel/NSSavePanel before opening a new picker. rfd
# doesn't expose the panel handle, so we reach into AppKit directly.
objc2 = "0.6"

[features]
journal-cli = []

[[bin]]
name = "emit-sample-journal"
path = "src/bin/emit-sample-journal.rs"
required-features = ["journal-cli"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tauri = { version = "2", features = ["test"] }
